# BaphometsQuest

./: .clang-format  .gitignore  .tidyrc  CMakeLists.txt  Doxyfile  README.md  Taskfile.yaml  taskfile.yaml
.github/workflows/: build-linux.yaml  build-macos.yaml  build-platform.yaml  build-windows.yaml  build.yaml  coverage.yaml
.llm/: STYLE.md
.task/checksum/: build
cmake/: platform_resize_handler.cmake
configuration/cmake/: compiler_options.cmake  dependencies.cmake  distribution.cmake  platform_resize_handler.cmake  targets.cmake  tests.cmake
configuration/cmake/platform/: linux.cmake  macos.cmake  windows.cmake
configuration/distribution/linux/: AppRun.in  baphomets_quest.desktop.in
configuration/distribution/macos/: Info.plist.in
configuration/distribution/windows/: application.rc.in
configuration/formatting/: .prettierrc  package.json
configuration/task/: build.yaml  documentation.yaml  formatting.yaml
documentation/: Doxyfile
documentation/badges/: coverage.json
documentation/guides/: mainpage.md
documentation/guides/pages/: maps_and_tilesets.md  node_tree.md  resource_cache.md  runtime_lifecycle.md  scene_loading.md  signals.md  testing.md
documentation/pages/: node_tree.md  resource_cache.md
llm/: STYLE.md
resources/configuration/: game.yaml  settings.yaml
resources/maps/: tileset.tsx
resources/maps/chunks/: home-ground-floor.tmx  home-town.tmx  overworld.tmx
resources/music/: Koyaanisqatsi.fur
resources/scenes/: main.xml
source/: cli.hpp  logger.cpp  logger.hpp  logging.hpp  main.cpp
source/components/: box.cpp  box.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp
source/core/: arguments.hpp  logger.cpp  logger.hpp
source/engine/: assetRegistry.cpp  assetRegistry.hpp  game.cpp  game.hpp  includes.hpp  lifecycle.cpp  lifecycle.hpp  node.cpp  node.hpp  node_manager.cpp  node_manager.hpp  property.cpp  property.hpp  resource_manager.cpp  resource_manager.hpp  scene.hpp  sceneLoader.cpp  sceneLoader.hpp  signal_manager.hpp
source/engine/assets/: assetRegistry.cpp  assetRegistry.hpp  assetRegistryKeys.cpp  assetRegistryLifecycle.cpp  assetRegistryLoaders.cpp
source/engine/components/: box.cpp  box.hpp  layoutNode.cpp  layoutNode.hpp  music.cpp  music.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  timer.cpp  timer.hpp
source/engine/format/: format.hpp
source/engine/game/: game.cpp  game.hpp  gameLifecycle.cpp  gameLoop.cpp  gameScenes.cpp  inputState.cpp  inputState.hpp
source/engine/node/: graphicNode.cpp  graphicNode.hpp  node.cpp  node.hpp  nodeProperties.hpp  objectNode.cpp  objectNode.hpp
source/engine/nodes/: base.cpp  base.hpp
source/scenes/: mainScene.cpp  mainScene.hpp
source/specialized/: clickableRedBox.cpp  clickableRedBox.hpp  colourChangeBox.cpp  colourChangeBox.hpp
test/unit/: main.cpp  map_tileset_test.cpp  node_test.cpp  parse_format_test.cpp  resource_manager_test.cpp  scene_loader_test.cpp  signal_test.cpp  state_test.cpp  support.hpp  timer_test.cpp
wiki/: installation.md
(+148 files in other folders)
